* Mon May 7 2012 Dan Prince <dprince@redhat.com> - 
  - Add 'projects' config option. Defaults to ['nova', 'keystone', 'glance']
  - Add 'job_types' config option. The comment task now makes use of
    configurable job_types when determining when results are present
    and approved.

* Mon Jan 9 2012 Dan Prince <dan.prince@rackspace.com> - 1.0.10
  - Fix 'undefined method `[]' for nil:NilClass' error that could occur in
    the approved? method of smoke_stack.rb. This error was keeping bellows
    from commenting on some merge props...

* Fri Dec 23 2011 Dan Prince <dan.prince@rackspace.com> - 1.0.9
  - Update the 'comment' task so that only an approved set of results generates
    a gerrit comment. Successful result sets are automatically approved.
  - Remove debug statement in commit task.

* Mon Dec 12 2011 Dan Prince <dan.prince@rackspace.com> - 1.0.8
  - Update 'comment' task to display msg for test failures.

* Mon Dec 12 2011 Dan Prince <dan.prince@rackspace.com> - 1.0.7
  - Add 'comment' task to comment on Gerrit reviews w/ test result links.

* Sun Dec 4 2011 Dan Prince <dan.prince@rackspace.com> - 1.0.6
  - Truncate revisions for job git hashes.

* Sat Dec 3 2011 Dan Prince <dan.prince@rackspace.com> - 1.0.5
  - Add 'fire' task to run jobs for reviews without results.
  - Add --quiet option to all tasks.

* Thu Nov 17 2011 Dan Prince <dan.prince@rackspace.com> - 1.0.4
  - Explicitly set config templates and tests on sync.
  - All --all option to sync command. Remove 'reconfig' task.

* Thu Oct 27 2011 Dan Prince <dan.prince@rackspace.com> - 1.0.3
  - Handle empty config files gracefully.

* Thu Oct 27 2011 Dan Prince <dan.prince@rackspace.com> - 1.0.2
  - Update purge task so it purges both 'merged' and 'abandoned' branches.

* Thu Oct 20 2011 Dan Prince <dan.prince@rackspace.com> - 1.0.1
  - Update gerrit reviews call so it only searches 'master' reviews.
  - Set status to 'Updated' when a smoke tests is updated on sync.